tests/transpiler/x/py/cross_join_filter.py
# Generated by Mochi transpiler v0.10.34 on 2025-07-22 06:16 +0700
from dataclasses import dataclass
from typing import List, Dict

nums = [1, 2, 3]
letters = ["A", "B"]
@dataclass
class Pair:
    n: int
    l: any

pairs = [Pair(n, l) for n in nums for l in letters if n % 2 == 0]
print("--- Even pairs ---")
for p in pairs:
    print(" ".join(str(x) for x in [p["n"], p["l"]]).rstrip())
